--- a/css/styles.css
+++ b/css/styles.css
@@ -710,11 +710,12 @@ address {
   transition: transform var(--time-transition) cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.card-link:hover .card-thumb-title {
+.card-link:hover .card-thumb-title,
+.card-link:focus .card-thumb-title {
   transform: translateY(0);
 }
 
-/*-------- Modal windov ---------*/
+/*----------------- Modal windov ------------------*/
 
 .backdrop {
   position: fixed;
@@ -730,6 +731,12 @@ address {
 
   transition: transform var(--time-transition), opacity var(--time-transition),
     visibility var(--time-transition);
+}
+
+.modal-form {
+  display: block;
+  align-items: center;
+  justify-content: center;
 }
 
 .is-hidden {
@@ -787,7 +794,35 @@ address {
   color: #212121;
 
   text-align: center;
-  margin-bottom: 12px;
+  margin-bottom: 14px;
+}
+
+.modal-field:nth-child(-n + 3) {
+  margin-bottom: 10px;
+}
+
+.modal-field.textarea {
+  margin-bottom: 17px;
+}
+
+.modal-check {
+  margin-bottom: 30px;
+}
+
+.modal-lable {
+  position: relative;
+
+  display: block;
+  margin-bottom: 4px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+
+  letter-spacing: 0.01em;
+}
+
+.modal-input-svg {
+  position: relative;
 }
 
 .modal-input {
@@ -795,6 +830,154 @@ address {
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  margin-bottom: 28px;
-  padding-left: 15px;
+  padding-left: 42px;
+  outline: none;
+}
+
+.modal-input::placeholder {
+  color: var(--primary-color-text);
+}
+.modal-input:hover,
+.modal-input:focus {
+  border-color: var(--color-accent);
+  transition: border-color var(--time-transition) cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:hover + .modal-icon,
+.modal-input:focus + .modal-icon {
+  fill: var(--color-accent);
+  transition: fill var(--time-transition) cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  pointer-events: none;
+  fill: var(--color-title);
+  transform: translateY(-50%);
+  transition: fill var(--time-transition) cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-area {
+  width: 100%;
+  height: 120px;
+  /* margin-bottom: 20px; */
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 16px;
+  resize: none;
+  outline: none;
+}
+.modal-area:hover,
+.modal-area:focus {
+  border-color: var(--color-accent);
+  transition: border-color var(--time-transition) cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-check {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  position: absolute;
+}
+
+.modal-field .modal-link {
+  color: var(--color-accent);
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.check-text {
+  color: var(--primary-color-text);
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.check-text span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.checkbox-svg {
+  width: 16px;
+  height: 15px;
+  border: 1px solid var(--color-title);
+  border-radius: 2px;
+  margin-right: 7px;
+  fill: transparent;
+}
+
+.input-check:checked + .checkbox-svg {
+  background-color: var(--color-accent);
+  border: none;
+  fill: #ffffff;
+}
+
+.btn-send {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
+/*--------- ПІДПИСКА ----------*/
+
+.footer-sub-input {
+  margin-left: 93px;
+}
+
+.footer-field {
+  position: relative;
+
+  min-width: 358px;
+  height: 50px;
+  margin-top: 20px;
+  /* margin-right: 12px; */
+  padding: 15px 16px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: transparent;
+}
+
+.footer-input {
+  width: 100%;
+  height: 100%;
+  outline: none;
+  background-color: transparent;
+  border: none;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-btn {
+  position: absolute;
+
+  top: 0;
+  left: calc(100% + 12px);
+}
+.footer-btn-icon {
+  position: relative;
+  /* padding-left: 29px; */
+  padding-right: 62px;
+}
+
+.footer-btn-icon::after {
+  position: absolute;
+  content: "";
+  width: 24px;
+  height: 24px;
+  top: 0;
+  left: 0;
+
+  /* background-color: red; */
+  /* background-image: url(../images/icons.svg#icon-send); */
+}
+
+.btn-icon {
+  position: absolute;
+  top: 50%;
+  right: 28px;
+  transform: translateY(-50%);
+  pointer-events: none;
 }
