--- a/css/styles.css
+++ b/css/styles.css
@@ -769,6 +769,7 @@ address {
   position: absolute;
   top: 8px;
   right: 8px;
+  cursor: pointer;
 
   display: flex;
   align-items: center;
@@ -802,7 +803,7 @@ address {
 }
 
 .modal-field.textarea {
-  margin-bottom: 17px;
+  margin-bottom: 20px;
 }
 
 .modal-check {
@@ -860,6 +861,7 @@ address {
 }
 
 .modal-area {
+  display: block;
   width: 100%;
   height: 120px;
   /* margin-bottom: 20px; */
@@ -888,11 +890,15 @@ address {
   text-decoration: underline;
 }
 
+.checkbox {
+  margin-bottom: 30px;
+}
+
 .check-text {
   color: var(--primary-color-text);
   display: flex;
   align-items: center;
-  margin-bottom: 30px;
+  justify-content: center;
 }
 
 .check-text span {
@@ -928,56 +934,33 @@ address {
 }
 
 .footer-field {
-  position: relative;
-
-  min-width: 358px;
-  height: 50px;
+  display: flex;
+  width: 575px;
   margin-top: 20px;
-  /* margin-right: 12px; */
+}
+
+.footer-input {
+  display: inline-block;
+  width: 358px;
+  height: 50px;
   padding: 15px 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: transparent;
-}
 
-.footer-input {
-  width: 100%;
-  height: 100%;
   outline: none;
-  background-color: transparent;
-  border: none;
+  /* background-color: transparent; */
   color: rgba(255, 255, 255, 0.6);
 }
 
-.footer-btn {
-  position: absolute;
-
-  top: 0;
-  left: calc(100% + 12px);
-}
 .footer-btn-icon {
-  position: relative;
-  /* padding-left: 29px; */
-  padding-right: 62px;
-}
-
-.footer-btn-icon::after {
-  position: absolute;
-  content: "";
-  width: 24px;
-  height: 24px;
-  top: 0;
-  left: 0;
-
-  /* background-color: red; */
-  /* background-image: url(../images/icons.svg#icon-send); */
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 12px;
 }
 
 .btn-icon {
-  position: absolute;
-  top: 50%;
-  right: 28px;
-  transform: translateY(-50%);
-  pointer-events: none;
+  margin-left: 10px;
 }
